making commad editable

--- a/sherly_app/templates/base.html
+++ b/sherly_app/templates/base.html
@@ -184,7 +184,7 @@
                 <li>
                     <a href="{% url 'profile' %}" title="USERS">
 
-                        <i class="fas fa-user-circle"></i> PROFILE ADMIN
+                        <i class="fas fa-user-circle"></i> PROFIL ADMIN
                     </a>
                 </li>
                 <li>
