--- a/sherly_app/templates/utilisateurs/profile_user.html
+++ b/sherly_app/templates/utilisateurs/profile_user.html
@@ -8,7 +8,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header" style="background-color: #4CAF50; color: white;">
-                        <h2 class="mb-0">PROFILE DE {{profile.username}}</h2>
+                        <h2 class="mb-0">PROFIL DE {{profile.username}}</h2>
                     </div>
                     <div class="card-body">
                         <form method="post">
