--- a/sherly_app/templates/facture/telechargement_facture.html
+++ b/sherly_app/templates/facture/telechargement_facture.html
@@ -177,14 +177,14 @@ body {
                         <table class="table">
                             <thead class="thead-dark custom-table-header">
                                 <tr>
-                                    <th scope="col">Désignation</th>
-                                    <th scope="col">Qet</th>
-                                    <th scope="col">P.U.tarif</th>
-                                    <th scope="col">% Rem </th>
-                                    <th scope="col">Montant Remise</th>
-                                    <th scope="col">P.U.net Ht </th>
-                                    <th scope="col">Facture en EUR</th>
-                                    <th scope="col">%TVA</th>
+                                    <th scope="col">{{facture.col1}}</th>
+                                    <th scope="col">{{facture.col2}}</th>
+                                    <th scope="col">{{facture.col3}}</th>
+                                    <th scope="col">{{facture.col4}}</th>
+                                    <th scope="col">{{facture.col5}}</th>
+                                    <th scope="col">{{facture.col6}}</th>
+                                    <th scope="col">{{facture.col7}}</th>
+                                    <th scope="col">{{facture.col8}}</th>
                                     
                                 </tr>
                             </thead>
