--- a/sherly_app/templates/company/edit.html
+++ b/sherly_app/templates/company/edit.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="card">
             <div class="card-header" style="background-color: #4CAF50; color: white;">
-                <h2 class="mb-0">MODIFICATION SOCIÉTÉ - INFORMATIONS</h2>
+                <h2 class="mb-0">MODIFICATION SOCIÉTÉ - INFORMATIONS </h2>
             </div>
             <div class="card-body">
                 <form method="post" enctype="multipart/form-data" id="companyForm">
@@ -40,12 +40,16 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
+                                    
                                     <input type="text" class="form-control" id="{{ form.nom2.id_for_label }}" name="{{ form.nom2.name }}" value="{{ form.nom2.value }}" required oninput="this.value = this.value.toUpperCase()">
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <label for="{{ form.designation.id_for_label }}" class="form-label"> CODE CLIENT:</label>
+                            &amp;
+
+
                             <input type="number" class="form-control" id="{{ form.code_client.id_for_label }}" name="{{ form.code_client.name }}" value={{form.code_client.value}} required oninput="this.value = this.value.toUpperCase()">
                         </div>
                     </div>
@@ -84,7 +88,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-5">
-                            <input type="text" class="form-control" id="{{ form.ligne4.id_for_label }}" name="{{ form.ligne4.name }}" value="{{ form.ligne4.value }}" required oninput="this.value = this.value.toUpperCase()">
+                            <input type="text" class="form-control" id="{{ form.ligne4.id_for_label }}" name="{{ form.ligne4.name }}" value="{{ form.ligne4.value }}" >
                         </div>
                     </div>
                     <div class="row">
