--- a/sherly_app/templates/base.html
+++ b/sherly_app/templates/base.html
@@ -17,6 +17,11 @@
 
     <!-- FontAwesome 6 -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet" />
+
+    <!-- Main CSS -->
+    <link href="{% static 'css/main.css' %}" rel="stylesheet" />
 
     <style>
         /* Reset */
@@ -187,11 +192,10 @@
     </button>
 
     <!-- Sidebar -->
-    <nav id="sidebar">
+    <nav id="sidebar" class="fade-in">
         <div class="sidebar-header">
-            <a href="{% url 'company' %}">
-                <img src="{{societe.logo.url}}" alt="Logo société" />
-            </a>
+            <img src="{% static 'images/logo.png' %}" alt="Logo" class="fade-in">
+            <h3>{{societe.nom1}}</h3>
         </div>
 
         {% if user.is_superuser %}
@@ -213,7 +217,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div id="content">
+    <div id="content" class="fade-in">
         <div class="container-fluid">
             {% block content %}
             {% endblock %}
